[gd_scene load_steps=4 format=3 uid="uid://mfbkx853xiww"]

[ext_resource type="Script" path="res://Scripts/enemyOne.gd" id="1_o6r66"]
[ext_resource type="Texture2D" uid="uid://c0gc6tbajiad" path="res://Assets/png/Drone.png" id="2_f73gs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hpv6i"]
radius = 159.013

[node name="Enemy1" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_o6r66")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_f73gs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.05, 0.05)
polygon = PackedVector2Array(-106, -173.4, -104.3, -164, -83, -164, -83, -161, -81.2, -141, -73.2, -141, -70, -137.8, -70, -107, -60.3, -107, -58.3, -96, -50.2, -96, -47, -92.8, -47, -84, -21.5, -84, -18.6, -96, 19, -96, 19, -94.1, 22, -92.1, 22, -84, 47, -84, 47, -93.7, 58, -95.7, 58, -103.8, 61.2, -107, 70, -107, 70, -138.7, 81, -140.7, 81, -162, 83.8, -162, 104, -163.8, 104, -172.8, 107.2, -176, 155.6, -176, 158.5, -164, 179, -164, 179, -161, 180.8, -141, 189.8, -141, 193, -137.8, 193, -112.3, 181, -110.3, 181, -89, 178.2, -89, 158, -87.2, 158, -80.5, 155.2, -75, 106.3, -75, 104.3, -87, 90, -87, 90, -77.3, 79, -75.3, 79, -67.2, 75.8, -64, 67, -64, 67, -50, 76.9, -50, 78.9, -5, 127, -5, 127, -25, 129.8, -25, 150, -26.8, 150, -35.8, 153.2, -39, 188.8, -39, 193, -34.8, 193, -27, 209.2, -27, 210.5, -28.4, 213, -27.3, 213, -26.1, 216, -24.1, 216, -5, 220.6, -5, 227, -1.10001, 227, 37, 224.4, 37, 216, 38.7, 216, 60, 213.2, 60, 193, 61.8, 193, 69.8, 189.8, 73, 152.3, 73, 150.3, 62, 135.7, 62, 127, 59.5, 127, 39, 90, 39, 90, 47.7, 79, 49.7, 79, 71, 76.4, 71, 67, 72.7, 67, 94, 64.4, 94, 56, 95.7, 56, 103.8, 52.8, 107, 33, 107, 33, 116.7, 22, 118.7, 22, 126.8, 18.8, 130, -17.3, 130, -22, 128.4, -22, 119, -28.8, 119, -33, 114.8, -33, 107, -53.7, 107, -55.7, 96, -63.8, 96, -67, 92.8, -67, 72.7, -79, 70.7, -79, 49.7, -90, 47.7, -90, 39, -115, 39, -115, 59, -116.9, 59, -118.9, 62, -122.1, 62, -138, 61.1, -138, 69.8, -141.2, 73, -178.7, 73, -180.7, 62, -201, 62, -201, 60.1, -204, 58.1, -204, 39, -211.8, 39, -216, 34.8, -216, -0.799988, -211.8, -5, -209.9, -5, -204, -4.29999, -204, -23.8, -200.8, -27, -180.7, -27, -178.7, -39, -140, -39, -140, -36.4, -138.3, -27, -118.2, -27, -115, -23.8, -115, -5, -79, -5, -79, -47.7, -67, -49.7, -67, -64.3, -79, -66.3, -79, -75, -87, -75, -87, -76.9, -90, -78.9, -90, -87, -104.3, -87, -106.3, -75, -156, -75, -156, -76.9, -159, -78.9, -159, -87, -177.8, -87, -181, -90.2, -181, -110.3, -193, -112.3, -193, -139, -190.4, -139, -181, -140.7, -181, -160.8, -177.8, -164, -159, -164, -159, -173, -156.8, -173, -156, -173.8, -156, -176, -106, -176)

[node name="Detection" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_hpv6i")

[node name="SpawnPosition1" type="Marker2D" parent="."]

[node name="ShootSpeed" type="Timer" parent="."]
autostart = true

[node name="Despawner" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
[connection signal="timeout" from="Despawner" to="." method="_on_despawner_timeout"]
